--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,16 +1,34 @@
-<h2>Change your password</h2>
+<div class="col-md-6 col-md-offset-3">
+	<div class="row">
+		<div class="panel panel-default">
+			<div class="panel-heading">
+				<h2>Change your password</h2>
+			</div>
+			<div class="panel-body">
+				<%= simple_form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :put }) do |f| %>
+					<%= f.error_notification %>
 
-<%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :put }) do |f| %>
-  <%= devise_error_messages! %>
-  <%= f.hidden_field :reset_password_token %>
+					<div class="form-group">
+						<%= f.input :reset_password_token, :as => :hidden %>
+						<%= f.full_error :reset_password_token %>
+					</div>
+					
+					<div class="form-group">
+						<%= f.input :password, :label => "New password", :required => true, :autofocus => true, input_html: { class: 'form-control' } %>
+					</div>
+					
+					<div class="form-group">
+						<%= f.input :password_confirmation, :label => "Confirm your new password", :required => true, input_html: { class: 'form-control' } %>
+					</div>		
 
-  <div><%= f.label :password, "New password" %><br />
-  <%= f.password_field :password, :autofocus => true %></div>
-
-  <div><%= f.label :password_confirmation, "Confirm new password" %><br />
-  <%= f.password_field :password_confirmation %></div>
-
-  <div><%= f.submit "Change my password" %></div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+					<div class="form-actions">
+						<%= f.button :submit, "Change my password", class: "btn btn-primary"  %>
+					</div>
+				<% end %>
+			</div>
+			<div class="panel-footer">
+				<%= render "devise/shared/links" %>
+			</div>
+		</div>
+	</div>
+</div>
