--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,12 +1,25 @@
-<h2>Forgot your password?</h2>
-
-<%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f| %>
-  <%= devise_error_messages! %>
-
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, :autofocus => true %></div>
-
-  <div><%= f.submit "Send me reset password instructions" %></div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+<div class="col-md-6 col-md-offset-3">
+	<div class="row">
+		<div class="panel panel-default">
+			<div class="panel-heading">
+					<h2>Forgot your password?</h2>
+			</div>
+			<div class="panel-body">
+						<%= simple_form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f| %>
+							<%= f.error_notification %>
+						<div class="form-group">
+							<%= f.input :email, :required => false, :autofocus => true, input_html: { class: 'form-control' } %>
+						</div>
+			
+						<div class="form-actions">
+							<%= f.button :submit, "Send me reset password instructions", class: "btn btn-primary" %>
+						</div>
+					<% end %>
+			</div>
+					
+			<div class="panel-footer">
+				<%= render "devise/shared/links" %>
+			</div>
+		</div>
+	</div>
+</div>
